--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/title_reg_imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -18,7 +18,7 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
+        android:layout_below="@+id/title_reg_imageView"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:src="@drawable/bg_profile2" />
