--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageBigEvents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -18,7 +18,7 @@
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
+        android:layout_below="@+id/imageBigEvents"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:src="@drawable/bg_profile2" />
@@ -35,14 +35,14 @@
         android:id="@+id/button2"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
+        android:layout_alignBaseline="@+id/btnCronograma"
+        android:layout_alignBottom="@+id/btnCronograma"
         android:layout_alignLeft="@+id/imageView2"
         android:layout_marginLeft="60dp"
         android:text="Button" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btnCronograma"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
