--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,5 +17,10 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
    
+    <style name="AppTheme.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/red</item>
+        <item name="android:padding">5dp</item>
+    </style>
 
 </resources>
