--- a/res/layout/fragment_events.xml
+++ b/res/layout/fragment_events.xml
@@ -11,8 +11,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:adjustViewBounds="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/cargando" />
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:id="@+id/LinearLayout2"
