--- a/res/drawable/red_button.xml
+++ b/res/drawable/red_button.xml
@@ -3,5 +3,7 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle" ><solid android:color="@color/red"/></shape>
     </item>
-
+	<item android:state_pressed="true">
+        <shape android:shape="rectangle" ><solid android:color="@color/red_dark"/></shape>
+    </item>
 </selector>
