--- a/res/layout/fragment_events.xml
+++ b/res/layout/fragment_events.xml
@@ -25,7 +25,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:padding="10dp" />
+            android:paddingBottom="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="5dp"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
