--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -7,5 +7,6 @@
     <color name="counter_text_bg">#626262</color>
     <color name="counter_text_color">#c5c4c4</color>
     <color name="red">#CE3B43</color>
+   	<color name="red_dark">#8C0000</color>
     <color name="white">#FFFFFF</color>
 </resources>
