--- a/res/layout/fragment_detail_events.xml
+++ b/res/layout/fragment_detail_events.xml
@@ -13,35 +13,36 @@
         android:scaleType="fitXY"
         android:src="@drawable/bg_cronograma" />
 
-    <LinearLayout
+    <RadioGroup
+        android:id="@+id/radioGroup1"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/imageViewNews" >
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageViewNews"
+        android:orientation="horizontal" >
 
-        <Button
+        <RadioButton
             android:id="@+id/event_day1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:checked="true"
+            android:text="Dia 1" />
 
-        <Button
+        <RadioButton
             android:id="@+id/event_day2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
-    </LinearLayout>
+            android:text="Dia 2" />
+    </RadioGroup>
 
     <ListView
-        android:id="@+id/listViewNews"
+        android:id="@+id/listViewDays"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/linearLayout1" >
+        android:layout_below="@+id/radioGroup1" >
     </ListView>
 
 </RelativeLayout>
