--- a/res/layout/fragment_whoweare.xml
+++ b/res/layout/fragment_whoweare.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/sca_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="166dp"
-        android:text="@string/sca_title"
-        />
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/youtubeplayer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </com.google.android.youtube.player.YouTubePlayerView>
 
-    <TextView
-        android:id="@+id/sca_description"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/sca_title_scroll"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sca_title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:padding="10dp"
-        android:text="@string/sca_descripcion"
-        android:textSize="12sp"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_below="@+id/youtubeplayer" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/sca_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:layout_gravity="center_vertical"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/sca_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sca_title"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
