Cambio de fuentes y arreglo de imágenes

--- a/res/layout/fragment_architect_detail.xml
+++ b/res/layout/fragment_architect_detail.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/org.sca.sca"
+    android:background="#e2e2e2">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,11 +15,29 @@
             android:layout_centerHorizontal="true"
             android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/imageViewArchitect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+          <RelativeLayout 
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
 
+              <ImageView
+                  android:id="@+id/imageView1"
+                  android:layout_width="match_parent"
+                  android:layout_height="150dp"
+                  android:layout_alignParentLeft="true"
+                  android:scaleType="fitXY"
+                  android:src="@drawable/bg_login" />
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/imageViewArchitect"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                app:border="true"
+                app:border_width="4dp"
+                app:shadow="true" />
+
+				</RelativeLayout>
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="match_parent"
@@ -43,7 +62,7 @@
             <TextView
                 android:id="@+id/textViewBio"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="Small Text"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
