--- a/res/layout/fragment_competition_detail.xml
+++ b/res/layout/fragment_competition_detail.xml
@@ -13,17 +13,27 @@
             android:layout_below="@+id/imageView"
             android:layout_centerHorizontal="true"
             android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/imageViewContest"
+            
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:scaleType="center"
+                android:layout_height="152dp" >
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/bg_concursos" />
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/bg_contest"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:src="@drawable/bg_cronograma" />
 
+				</RelativeLayout>
             <TextView
                 android:id="@+id/textViewTitleContest"
                 android:layout_width="match_parent"
