--- a/res/layout/event_detail_row.xml
+++ b/res/layout/event_detail_row.xml
@@ -3,12 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/imageViewImageActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_margin="10dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:src="@drawable/ic_launcher" />
 
     <LinearLayout
@@ -27,7 +25,8 @@
             android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textViewHour"
