--- a/res/layout/fragment_competition.xml
+++ b/res/layout/fragment_competition.xml
@@ -8,10 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:scaleType="center"
-        android:src="@drawable/bg_cronograma" />
+        android:src="@drawable/bg_concursos" />
 
     <ListView
         android:id="@+id/listView"
