--- a/res/layout/fragment_event_detail_detail.xml
+++ b/res/layout/fragment_event_detail_detail.xml
@@ -15,7 +15,7 @@
             android:orientation="vertical" >
 
             <ImageView
-                android:id="@+id/imageViewContest"
+                android:id="@+id/bg_contest"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
