--- a/res/layout/region_detail.xml
+++ b/res/layout/region_detail.xml
@@ -25,10 +25,11 @@
         android:id="@+id/city_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:textColor="@android:color/white" />
+        android:layout_marginBottom="24dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="100dp"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/president_region_textView"
@@ -41,11 +42,10 @@
 
     <TextView
         android:id="@+id/address_textView"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageViewNews"
         android:layout_alignLeft="@+id/president_region_textView"
-        android:layout_below="@+id/president_region_textView"
-        android:layout_marginTop="14dp"
         android:textColor="@android:color/white" />
 
 </RelativeLayout>
