--- a/res/layout/regions_layout.xml
+++ b/res/layout/regions_layout.xml
@@ -27,9 +27,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/title_reg_imageView"
         android:layout_marginLeft="5dp"
-        android:text="Medium Text"
         android:textColor="@color/white_color"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="18sp" />
 
    
 
