--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/list_selector"
     android:padding="10dp" >
 
@@ -18,11 +18,14 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:paddingRight="40dp"
-        android:textColor="@color/list_item_title" />
+        android:textColor="@color/list_item_title"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/counter"
