--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -11,4 +11,5 @@
     <color name="black_color">#000000</color>
     <color name="gray_ligth_color">#DDDDDD</color>
    	<color name="red_dark_color">#8C0000</color>
+   	<color name="gray_color">#777777</color>
 </resources>
