--- a/res/layout/fragment_camera.xml
+++ b/res/layout/fragment_camera.xml
@@ -4,22 +4,21 @@
     android:layout_height="match_parent" >
     
     <LinearLayout 
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         
         <SurfaceView 
             android:id="@+id/camera_surfaceView"
             android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             />
         
         <Button
             android:id="@+id/camera_takeButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_height="match_parent"
             android:text="@string/take" />
         
     </LinearLayout>
