--- a/res/layout/fragment_photobooth.xml
+++ b/res/layout/fragment_photobooth.xml
@@ -33,14 +33,17 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginLeft="50dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:scaleType="center"
+            android:src="@drawable/camara2" />
 
         <ImageButton
             android:id="@+id/galleryButton"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_marginRight="50dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:src="@drawable/galeria2" />
 
     </LinearLayout>
 
