--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -45,7 +45,7 @@
             android:text="Editar" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnCloseSession"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
