--- a/res/layout/activity_start_view.xml
+++ b/res/layout/activity_start_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/ivPhoto"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="fitXY"
