--- a/res/layout/fragment_competition_detail.xml
+++ b/res/layout/fragment_competition_detail.xml
@@ -19,7 +19,7 @@
                 android:layout_height="152dp" >
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/ivPhoto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scaleType="fitXY"
