--- a/res/layout/fragment_profile.xml
+++ b/res/layout/fragment_profile.xml
@@ -37,7 +37,7 @@
         android:paddingRight="30dp" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnTakePhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
