--- a/res/layout/event_detail_row.xml
+++ b/res/layout/event_detail_row.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
+    android:paddingLeft="40dp"
+    android:paddingRight="40dp"
+    android:paddingTop="5dp" >
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/imageViewImageActivity"
@@ -32,7 +36,9 @@
             android:id="@+id/textViewHour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp" />
+
     </LinearLayout>
 
 </RelativeLayout>
