--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/list_selector"
-    android:padding="10dp" >
+    android:padding="10dp"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp" >
 
     <ImageView
         android:id="@+id/icon"
