--- a/res/layout/fragment_architect_detail.xml
+++ b/res/layout/fragment_architect_detail.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/org.sca.sca"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/org.sca.sca"
-    android:background="#e2e2e2">
+    android:layout_height="match_parent"
+    android:background="#e2e2e2"
+    android:orientation="vertical" >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,29 +18,29 @@
             android:layout_centerHorizontal="true"
             android:orientation="vertical" >
 
-          <RelativeLayout 
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
-              <ImageView
-                  android:id="@+id/ivPhoto"
-                  android:layout_width="match_parent"
-                  android:layout_height="150dp"
-                  android:layout_alignParentLeft="true"
-                  android:scaleType="fitXY"
-                  android:src="@drawable/bg_login" />
+                <ImageView
+                    android:id="@+id/ivPhoto"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_alignParentLeft="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/bg_login" />
 
-            <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/imageViewArchitect"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                app:border="true"
-                app:border_width="4dp"
-                app:shadow="true" />
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/imageViewArchitect"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    app:border="true"
+                    app:border_width="4dp"
+                    app:shadow="true" />
+            </RelativeLayout>
 
-				</RelativeLayout>
             <TextView
                 android:id="@+id/textViewName"
                 android:layout_width="match_parent"
@@ -85,4 +88,4 @@
         </LinearLayout>
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
