--- a/res/layout/regions_layout.xml
+++ b/res/layout/regions_layout.xml
@@ -9,28 +9,41 @@
         android:layout_height="100dp"
         android:scaleType="fitXY"
         android:src="@drawable/regionplaceholder" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/regionplaceholder"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg_black" />
     
      <ImageView
          android:id="@+id/title_reg_imageView"
          android:layout_width="280dp"
-         android:layout_height="48dp"
+         android:layout_height="38dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
-         android:layout_marginTop="68dp"
+         android:layout_marginTop="62dp"
          android:scaleType="fitXY"
-         android:src="@drawable/bg_reg_title" />
+         android:src="@drawable/bg_reg_title1" />
 
     <TextView
         android:id="@+id/title_reg_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/regionplaceholder"
         android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/title_reg_imageView"
-        android:layout_marginLeft="5dp"
-        android:textColor="@color/white_color"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="60dp"
+        android:gravity="left|center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/white_color"
         android:textSize="18sp" />
-
-   
 
 </RelativeLayout>
